tests/errors/references/lambda_nested_captures_env_const_mut_fn.duck
fn main() {
    const a = 100;
    const f = mut fn () {
        const inner_f = mut fn() {
            a = 200;
        };
    };
}
